// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component Rendering Tests renders to UI as expected 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3 />
  <p />
</div>
`;

exports[`Card Component Rendering Tests renders to UI as expected with PROPS 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    Dinosaurs
  </h3>
  <p>
    Died out
  </p>
</div>
`;
